--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    // "moduleResolution": "bundler", // <-- Ancienne valeur
-    "moduleResolution": "nodenext", // <-- Nouvelle valeur
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
